# transformer-model-webserver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.ini  pyproject.toml  run.sh
src/: __init__.py
src/model/: __init__.py  predictor.py
src/utils/: iterate.py
src/web/: api.py
src/web/templates/: index.html
